[project]
name = "osv-mcp"
version = "0.1.0"
description = "OSV integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Eden Yavin", email = "eden.yavin25@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "requests (>=2.32.3,<3.0.0)",
]

[project.scripts]
osv-server = "src.main:main"

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
